Add Poppins font and update global styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  font-family: "Poppins", sans-serif;
+}
